// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  method() {
    var x = 1;
    while(typeof x == "number" || typeof x == "string") {
        x = x + 1;
        if (true) x = "";
    }
    var z:number = x;
  }
}

=====================================output=====================================
class A {
  method() {
    var x = 1;
    while (typeof x == "number" || typeof x == "string") {
      x = x + 1;
      if (true) x = "";
    }
    var z: number = x;
  }
}

================================================================================
`;

exports[`class.js 2`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
class A {
  method() {
    var x = 1;
    while(typeof x == "number" || typeof x == "string") {
        x = x + 1;
        if (true) x = "";
    }
    var z:number = x;
  }
}

=====================================output=====================================
class A {
    method() {
        var x = 1;
        while (typeof x == "number" || typeof x == "string") {
            x = x + 1;
            if (true) x = "";
        }
        var z: number = x;
    }
}

================================================================================
`;

exports[`nested-functions.spec.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const c = () => {};

function a() {
  return function b() {
    return () => {
      return function() {
        return c;
      }
    }
  }
}

=====================================output=====================================
const c = () => {};

function a() {
  return function b() {
    return () => {
      return function() {
        return c;
      };
    };
  };
}

================================================================================
`;

exports[`nested-functions.spec.js 2`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
const c = () => {};

function a() {
  return function b() {
    return () => {
      return function() {
        return c;
      }
    }
  }
}

=====================================output=====================================
const c = () => {};

function a() {
    return function b() {
        return () => {
            return function() {
                return c;
            };
        };
    };
}

================================================================================
`;
